--- a/src/scss/components/_section.scss
+++ b/src/scss/components/_section.scss
@@ -53,7 +53,7 @@
 
     &--grills:before,
     &--grills:after {
-      background-size: 60%;
+      background-size: 90%;
     }
 
     &--grills:before {
