--- a/src/scss/components/_section_group.scss
+++ b/src/scss/components/_section_group.scss
@@ -10,6 +10,8 @@
     &--triple-skew {
       background-image: url('/img/triple-mobile-bg.svg');
       background-repeat: no-repeat;
+      background-position: center 300px;
+      background-size: 100% 1488px;
     }
   }
 }
